# openai-api-wrapper

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  index.html  openai_api_wrapper.html  pyproject.toml  search.js
.github/workflows/: test.yaml
openai_api_wrapper/: chat_completion.html  cli.html  constants.html  logs.html  parser.html
src/openai_api_wrapper/: chat_completion.py  cli.py  constants.py  parser.py
tests/: test_gpt.py
