[tool.poetry]
name = "openai_api_wrapper"
version = "0.1.0"
description = "A beautiful description."
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "openai_api_wrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.0.0"

[tool.poetry.extras]
docs = ["pdoc"]

[tool.poetry.scripts]
openai_api = "openai_api_wrapper.cli:main"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports = true
